tests/miz/fail/types/fail_type_elaboration_predicate_functor_definition_gap_001.miz
definition
  let x, y be set;
  pred DefinitionPredicatePayloadBoundary: x boundary_rel y means thesis;
  func DefinitionFunctorPayloadBoundary: boundary_func x -> set equals x;
end;
